# thrml-python-implementation

./: .gitignore  README.md  pyproject.toml
examples/: ising_demo.py
tests/: test_ising.py
thrml/: __init__.py  block_sampling.py  blocks.py  interaction.py  models.py  nodes.py  samplers.py
